/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.eva2_7_publicacion;

/**
 *
 * @author jesus
 */
public interface Datos {
    public void mostrarDatos();
}
